methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:16: error: type mismatch;
 found   : Unit
 required: Boolean
  backward()
          ^